# prism

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  task_proposal.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
docker/: bsl-ls.Dockerfile  onec.Dockerfile  onescript.Dockerfile
docs/: architecture.md  changelog.md  cli.md  decisions.md  how-it-works.md  index.md  leaderboard.md  robots.txt  status.md  validity.md
editions/: core.yaml
generation/: models.yaml  params.yaml  pricing.yaml  prompts.yaml
harness/: check.py  cli.py  loaders.py  orchestrate.py  preflight.py  settings.py  submit.py  ui.py
harness/execute/: bsl_ls.py  runner.py
harness/execute/onec/: __init__.py  assemble.py  fixtures_gen.py  perf_run.py  runner.py
harness/generate/: __init__.py  budget.py  hashing.py  mock.py  pricing.py  results.py  retry.py  run.py  transport.py  types.py
harness/generate/adapters/: __init__.py  base.py  gigachat.py  mock.py  openai_compat.py  registry.py  yandex_responses.py  yandexgpt.py
harness/generate/context/: __init__.py  base.py  loader.py  spec_provider.py
harness/report/: __init__.py  catalog.py  charts.py  leaderboard_md.py
harness/score/: cost_model.py  meaning.py  optimization.py  optimization_b_exec.py  optimization_exec.py  platform.py  quality.py  syntax.py
harness/stats/: __init__.py  funnel.py  summary.py  tags.py
harness/synthconfig/: README.md  __init__.py  build_config.py  synth.py
metric/: smop_criteria.yaml
metrics/: error_taxonomy.yaml  smop.yaml  smop_l1_auto.yaml  smop_l2_expert.yaml
results/: NOTICE  README.md  experiment_A_20260301_125458.json  experiment_A_20260617_031633.json  experiment_B_20260301_130327.json  experiment_B_20260617_031637.json
results/auto/: experiment_A_20260617_031633_auto_l1.json  experiment_B_20260617_031637_auto_l1.json  site_data.json
results/evaluations/: experiment_A_20260301_125458_expert_01_evaluation.json  experiment_B_20260301_130327_expert_01_evaluation.json
results/experiment_B_20260617_031637.parts/: B16__alice.json  B16__alice_flash.json  B16__deepseek.json  B16__gemini.json  B16__gemini31_pro.json  B16__gemini35_flash.json  B16__gigachat_lite.json  B16__gigachat_max.json  B16__gigachat_pro.json  B16__glm.json  B16__gpt55.json  B16__gpt5_mini.json  B16__gpt_oss120b.json  B16__grok43.json  B16__grok_build.json  B16__mimo25.json  B16__minimax_m3.json  B16__opus.json  B16__qwen.json  B16__qwen36.json  B16__qwen37_plus.json  B16__sonnet.json  B16__ygpt51_pro.json  B16__ygpt5_lite.json  B16__ygpt5_pro.json  B17__alice.json  B17__alice_flash.json  B17__deepseek.json  B17__gemini.json  B17__gemini31_pro.json  B17__gemini35_flash.json  B17__gigachat_lite.json  B17__gigachat_max.json  B17__gigachat_pro.json  B17__glm.json  B17__gpt55.json  B17__gpt5_mini.json  B17__gpt_oss120b.json  B17__grok43.json  B17__grok_build.json  (+85 more)
tasks/: README.md  experiment.yaml  models.yaml  tags.yaml  tasks_category_A.yaml  tasks_category_B.yaml
tasks/category_a/A10_roman_numerals/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A10_sieve_primes/: perf.yaml  task.yaml  tests.yaml
tasks/category_a/A10_sorted_insert/: canonical.bsl  perf.yaml  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A11_binary_search/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A11_working_days/: canonical.bsl  perf.yaml  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A12_merge_intervals/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A12_remove_value/: canonical.bsl  perf.yaml  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A13_max_subarray/: canonical.bsl  perf.yaml  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A13_phone_normalize/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A14_moving_average/: canonical.bsl  task.yaml
tasks/category_a/A14_reverse_words/: canonical.bsl  perf.yaml  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A15_matrix_transpose/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A15_modpow/: canonical.bsl  perf.yaml  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A16_word_frequency/: canonical.bsl  task.yaml
tasks/category_a/A17_levenshtein/: canonical.bsl  task.yaml
tasks/category_a/A18_bracket_balance/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A19_rle_compress/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A1_bubble_sort/: canonical.bsl  perf.yaml  task.yaml  tests.yaml
tasks/category_a/A1_group_table/: canonical.bsl  perf_baseline.bsl  task.yaml  tests.yaml
tasks/category_a/A20_gcd_lcm/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A21_anagrams/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A22_digital_root/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A23_base_conversion/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A24_sieve_primes/: canonical.bsl  task.yaml
tasks/category_a/A25_array_rotation/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A2_fio_parsing/: canonical.bsl  task.yaml  tests.yaml
tasks/category_a/A2_group_table/: canonical.bsl  perf.yaml  task.yaml
tests/: test_adapters.py  test_check.py  test_context_loader.py  test_funnel.py  test_generate_run.py  test_loaders.py  test_meaning.py  test_metadata_provider.py  test_mock_generate.py  test_onec_runner.py  test_optimization.py  test_orchestrate.py  test_platform.py  test_preflight.py  test_quality.py  test_report_md.py  test_resilience.py  test_runner.py  test_settings.py  test_stats_summary.py  test_submit.py  test_syntax.py  test_synthconfig.py  test_tags.py
tools/: export_dataset.py  get-bsl-ls.sh  get-onescript.sh
web/: .gitignore  astro.config.mjs  package-lock.json  package.json
web/public/: CNAME  robots.txt
web/scripts/: build-data.mjs  build-og.mjs  sync-docs.mjs
(+284 files in other folders)
