[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-bench"
version = "1.4.0"                       # + модель MiMo-V2.5 и публичная витрина (сайт)
description = "PRISM — исполняемый бенчмарк кодогенерации 1С (методика SMOP: Syntax · Meaning · Optimization · Platform)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Danila Andreev", email = "ads4.nr@mail.ru" }
]
keywords = [
    "llm", "benchmark", "1c", "1c-enterprise", "code-generation", "smop",
    "evaluation", "bsl", "onescript", "ai", "code-quality",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"             # код идёт на 3.10 (future-annotations); хост сейчас 3.10.x. Соседние подпроекты целятся в 3.11 — выровнять при слиянии в core

# Харнесс по факту импортов: стдлиб + PyYAML/pydantic + requests (боевой HTTP-транспорт
# слоя адаптеров генерации; в тестах транспорт инъектируется, requests не нужен).
#   pydantic-settings — типизированная загрузка ключей API из окружения/.env (авто-подхват);
#   rich — таблицы сводки (score) и прогресс-бар генерации (generate) в терминале.
dependencies = [
    "PyYAML>=6.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.14.2",
    "requests>=2.31",
    "rich>=13.7",
]

# Зависимости разработки — PEP 735 dependency-groups (нативно для uv, НЕ extras пакета):
# `uv sync` ставит группу dev по умолчанию; docs — по запросу: `uv sync --group docs`.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",     # рандомный порядок тестов — ловит утечку состояния между ними
    "pytest-xdist>=3.6",         # параллельный прогон (pytest -n auto) — режет минуты интеграции
    "ruff>=0.6",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs-material>=9.5",
    # mkdocstrings[python] — добавить, когда захотим автодок из докстрингов скореров
]

[project.scripts]
prism = "harness.cli:main"

[project.urls]
"Research Paper" = "https://github.com/4dand/1c-ai-codegen-research-paper"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]                  # пакет — harness/ (+ harness.execute, harness.score); tasks/tests/tools не пакеты

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]                      # чтобы `from harness...` резолвился без запуска строго из корня
markers = [
    # тесты, поднимающие реальные инструменты (OneScript/BSL LS/Docker-1С) — десятки секунд
    # и минуты. `make test-fast` (pytest -m "not slow") их пропускает для быстрой итерации;
    # полный `make test` гоняет всё.
    "slow: интеграция с реальной песочницей (1С/OneScript/BSL LS) — медленно",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
# ruff format заменяет black: единый стиль кода, гоняется в make lint / pre-commit / CI.
quote-style = "double"

[tool.ruff.lint]
# E/F/W — pycodestyle+pyflakes (база); I — isort (порядок импортов); B — bugbear (ловушки);
# UP — pyupgrade (современный синтаксис под target-version); S — flake8-bandit (безопасность,
# заменяет отдельный bandit).
select = ["E", "F", "W", "I", "B", "UP", "S"]
# E501 (длина строки) намеренно не линтуем: при ruff format длину держит ФОРМАТТЕР,
# а линтер только дублировал бы нытьём про строки, которые форматтер не вправе разбить.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Тесты: assert — их рабочий инструмент; ET.fromstring парсит СВОЙ сгенерированный XML.
"tests/**" = ["S101", "S314"]
# Контрактные инварианты формы конфига (их же валидирует make check) — это assert по делу.
"harness/loaders.py" = ["S101"]
"harness/score/quality.py" = ["S101"]
# Дистракторы — детерминированный ГПСЧ по seed, не криптография.
"harness/synthconfig/synth.py" = ["S311"]
# Песочницы осей легитимно шелятся во внешние инструменты (docker/oscript/java/1cv8) —
# аргументы формируются из доверенных констант/конфигов, не из пользовательского ввода.
"harness/execute/**" = ["S603", "S607"]
"harness/generate/transport.py" = ["S113"]
